2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/sip.h: Partial fix for #340824.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/pcss.cpp, src/endpoints/pcss.h: Partial fix for
	bug #340824.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/accountshandler.h, src/endpoints/ekiga.h,
	src/endpoints/h323.h: Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videooutput.cpp, src/devices/videooutput.h: Partial fix
	for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videoinput.h: Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/fakevideoinput.cpp, src/devices/fakevideoinput.h:
	Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp, src/devices/audio.h: Partial fix for #340824.

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/components/dbus.cpp: Partial fix for #340824.

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/components/bonobo.cpp: Partial fix for #340824.

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/clients/stun.cpp, src/clients/stun.h: Made readability better
	(partial fix for #340824).

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/clients/ils.cpp, src/clients/ils.h: Made readability better
	(partial fix for #340824).

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/gui/accounts.cpp: Made readability better (partial fix for
	#340824).

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp, src/gui/addressbook.h: Made readability
	better (partial fix for #340824).

2006-05-07  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.h: Removed the declaration of
	gtk_main_quit_callback, since it is now unused&unimplemented.
	Partially fixes #340858.

2006-05-06  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.h: Made readability better (partial fix for
	#340824).

2006-05-06  Julien Puydt  <jpuydt@free.fr>
