@@ -1,5 +1,10 @@
 2006-05-11  Julien Puydt  <jpuydt@free.fr>
 
+	* src/endpoints/urlhandler.cpp, src/endpoints/urlhandler.cpp: Final
+	fix for #340824.
+
+2006-05-11  Julien Puydt  <jpuydt@free.fr>
+
 	* src/endpoints/sip.h: Partial fix for #340824.
 
 2006-05-11  Julien Puydt  <jpuydt@free.fr>
